:tada: add bulk cif
